--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -194,6 +194,17 @@
 
 
 
+ <div class="col-8 offset-3 mb-3">
+    <h1>where you are</h1>
+    <div id="map">
+        
+    </div>
+ </div>
+ 
+ <section class="mapsection">
+ <link href="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css" rel="stylesheet">
+ <script src="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.js"></script>
+ </section>
 
 
 <!-- footer section start  -->
