--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
         <!-- <img src="images/home_image.jpeg" alt="home"> -->
         <h3>Sell your recyclables
             online with <span class="highlight">GarbageCollector!</span></h3>
-        <p>Paper - Plastics - Metals - Appliances</p>
+        <p>Madical - Waste - Metals</p>
         <p><span class="typewriter" id="typewriter"></span></p>
     
         <a href="/sign_in" class="btn btn-outline-primary">Get Started</a>
@@ -158,7 +158,7 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <h2 class="deferent_title">Households &amp; Businesses have different needs and we cater to each
+                        <h2 class="deferent_title">Medical-Hospital &amp; Businesses have different needs and we cater to each
                             of them</h2>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
         <div class="row f-sm-column-reverse">
             <div class="col-md-6">
                 <div class="content-holder">
-                    <p class="deferent_sub_title">For Households </p>
+                    <p class="deferent_sub_title">For Medical-Hospital</p>
                     <ul class="deferent_ul">
                         <li><img src="https://ik.imagekit.io/99x/startup/99xCheck_S1K62CB8I.svg"
                                 alt="assets"><span>On-Demand Doorstep Pickups</span></li>
